# Resourceful

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUDIT.md  CLAUDE.md  Dockerfile  README.md  TEST_COVERAGE_ANALYSIS.md  docker-compose.yml  kenmore-report-viewer.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  property_data_dump.json  pyproject.toml  requirements.txt  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  vercel.json  vitest.config.ts
.claude/: settings.json
.claude/agents/: pipeline-debugger.md  prompt-engineer.md  schema-migrator.md
.claude/commands/: debug-report.md  new-stage.md
.claude/rules/: ai-conventions.md  (+3 more)
app/: config.py  database.py  logging_config.py  main.py
docs/: ai-vision-brief.md  deploy-checklist.md  manus-vision-brief.md  production-runbook.md
scripts/: _cleanup-stale-reports.mjs  check-status.mjs  debug-lock.ts  rerun-report.ts  run-address-with-photos.ts  run-beacon-e2e.mjs  run-naperville-e2e.mjs  run-naperville-report.mjs  run-real-report.mjs  run-schaumburg-e2e.mjs  run-setauket-e2e.mjs  run-stage7.ts  run-van-buren-e2e.mjs  seed-counties.ts  seed-county-rules.ts  seed-demo-report.mjs  seed-extended-counties.ts  seed-top-counties.ts  setup-local.sh  state-assessment-rules.ts  unlock.sql
src/: instrumentation.ts  middleware.ts
src - Copy/: instrumentation-client.ts  instrumentation.ts
supabase/: config.toml  seed.sql
tests/: conftest.py  test_adapters.py  test_auth.py  test_listings.py  test_marketplace.py  test_order_lifecycle.py  test_orders.py  test_security.py
(+532 files in other folders)
